log
Sat, 19 Mar 2022 16:50:43: 
 list.c | 27 ++++++++++++++++++++++-----
 1 file changed, 22 insertions(+), 5 deletions(-)
 tests:  0|0
9ab1536
Sat, 19 Mar 2022 16:51:48: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function 'firstList':
list.c:41:5: error: 'return' with no value, in function returning non-void [-Werror=return-type]
   41 |     return;
      |     ^~~~~~
list.c:39:8: note: declared here
   39 | void * firstList(List * list) {
      |        ^~~~~~~~~
list.c: In function 'nextList':
list.c:46:5: error: 'return' with no value, in function returning non-void [-Werror=return-type]
   46 |     return;
      |     ^~~~~~
list.c:44:8: note: declared here
   44 | void * nextList(List * list) {
      |        ^~~~~~~~
list.c: In function 'lastList':
list.c:51:5: error: 'return' with no value, in function returning non-void [-Werror=return-type]
   51 |     return;
      |     ^~~~~~
list.c:49:8: note: declared here
   49 | void * lastList(List * list) {
      |        ^~~~~~~~
list.c: In function 'prevList':
list.c:56:5: error: 'return' with no value, in function returning non-void [-Werror=return-type]
   56 |     return;
      |     ^~~~~~
list.c:54:8: note: declared here
   54 | void * prevList(List * list) {
      |        ^~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
d78ccbe
Sat, 19 Mar 2022 18:07:55: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
e3be639
Sat, 19 Mar 2022 22:56:04: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
279d6f8
Sat, 19 Mar 2022 22:57:17: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
fe62451
Sat, 19 Mar 2022 22:59:42: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
8b4ea74
Sat, 19 Mar 2022 23:00:12: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  0|0
3891e6b
Sun, 20 Mar 2022 13:09:53: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  0|0
d1c06d8
Sun, 20 Mar 2022 13:11:59: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
dbf68af
Sun, 20 Mar 2022 16:21:20: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
c753324
Sun, 20 Mar 2022 16:22:04: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
4790bd0
Sun, 20 Mar 2022 16:27:53: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  0|0
6bf4a8b
Sun, 20 Mar 2022 16:33:31: 
 list.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  1|5
total_score: 10/70
2e74016
Sun, 20 Mar 2022 16:37:36: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
ebd5100
Sun, 20 Mar 2022 16:38:54: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
d37645f
Sun, 20 Mar 2022 16:41:44: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
155a658
Sun, 20 Mar 2022 16:42:28: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
d1e6ece
Sun, 20 Mar 2022 16:43:39: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
71aacdc
Sun, 20 Mar 2022 16:47:14: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
f878f8f
Sun, 20 Mar 2022 16:47:28: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  9|3
total_score: 35/70
5fec917
Sun, 20 Mar 2022 16:51:55: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
f7c1b23
Sun, 20 Mar 2022 16:52:56: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
1742353
Sun, 20 Mar 2022 21:35:27: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  0|0
1da71c9
Sun, 20 Mar 2022 21:40:03: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  11|1
total_score: 55/70
ac4301f
Sun, 20 Mar 2022 22:24:25: 
 list.c | 30 +++++++++++++++++++++++++++++-
 1 file changed, 29 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function 'popCurrent':
list.c:133:10: error: variable or field 'datoAux' declared void
  133 |     void datoAux = list->current->data;
      |          ^~~~~~~
list.c:133:20: error: initialization of 'int' from 'void *' makes integer from pointer without a cast [-Werror=int-conversion]
  133 |     void datoAux = list->current->data;
      |                    ^~~~
list.c:158:12: error: returning 'int' from a function with return type 'void *' makes pointer from integer without a cast [-Werror=int-conversion]
  158 |     return datoAux;
      |            ^~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ae71ea8
